kubernetes/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: stg
  name: stg-klaim-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '36000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '36000'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '36000'
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: stg.klaim.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stg-klaim-website-svc
                port:
                  number: 80
   
  tls:
    - hosts:
      - stg.klaim.ai
      secretName: stg-klaim-website-tls
